# geometrize

./: Cargo.toml
src/: main.rs
src/images/: heatmap.rs  mod.rs
src/libgeometrize/: lib.rs
src/libgeometrize/images/: heatmap.rs
src/libgeometrize/math/: mod.rs  point.rs  vector.rs
src/libgeometrize/math/shapes/: ellipse.rs  mod.rs  polygon.rs  rectangle.rs  triangle.rs
src/math/: vector.rs
src/math/shapes/: ellipse.rs  mod.rs  polygon.rs  rectangle.rs  triangle.rs
