[package]
name = "geometrize"
version = "0.2.0"
authors = ["rigma <rigbuntu@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.23.12"
rand = "0.8.2"

[[bin]]
name = "geometrize"
path = "src/main.rs"

[lib]
name = "libgeometrize"
path = "src/libgeometrize/lib.rs"
test = true
doctest = true
bench = false
